# teachmewow-agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260130_104026_initial_migration_create_threads_and_.py  20260201_121500_create_builds_table.py  20260201_130500_add_build_tree_payload.py
app/: __init__.py  lifespan.py  main.py
app/application/: __init__.py
app/application/agent/: __init__.py  graph.py  graph_builder.py  state_schema.py  streaming.py
app/application/agent/mappers/: __init__.py  message_mapper.py
app/application/services/: __init__.py  chat_service.py  thread_service.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  helix_query_result.py  message.py  thread.py  user.py
app/domain/repositories/: __init__.py  message_repository.py  thread_repository.py
app/domain/value_objects/: __init__.py  message_role.py  wow_class.py  wow_spec.py
app/infrastructure/: __init__.py
app/infrastructure/config/: __init__.py  settings.py
app/infrastructure/database/: __init__.py  connection.py
app/infrastructure/helix/: __init__.py  client.py
app/infrastructure/llm/: __init__.py  client.py
app/presentation/: __init__.py
app/presentation/api/: __init__.py  dependencies.py
app/presentation/schemas/: __init__.py  chat.py  thread.py
app/presentation/serializers/: __init__.py  message_serializer.py
tests/unit/: test_checklist_update_node.py  test_knowledge_explorer_routers.py  test_router_node.py  test_routing_models.py  test_streaming_custom_event.py
(+47 files in other folders)
